apps/edith/edith-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edith
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edith
  template:
    metadata:
      labels:
        app: edith
    spec:
      containers:
        - name: edith
          image: localhost:32000/edith
          ports:
            - containerPort: 80
          volumeMounts:
            - name: perso
              subPath: pad
              mountPath: /app/data
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "while sleep 600; do chmod 777 -R /app/data; done"]
      volumes:
        - name: perso
          persistentVolumeClaim:
            claimName: perso
