apps/edith/edith-local-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edith-local

  labels:
    type: local
spec:
  rules:
    - host: pad.local
      http:
        paths:
          - backend:
              service:
                name: edith
                port:
                  number: 3000
            path: /
            pathType: Prefix
